--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
    <head>
        <!-- Title for browser tab -->
       <title>Page 1</title>
-      <!-- Link to CSS and Javascript -->
-      <script src="index.js"></script>
+      <!-- Link to CSS -->
       <link href="index.css" rel="stylesheet" type="text/css">
-   </head>
+    </head>
 	
-   <body>
+    <body>
+        <!-- Link to JavaScript -->
+        <script src="index.js"></script>
         <!-- Headings -->
         <h1>Information Technology Major</h1>
         <h2>Topic 1: Object Oriented Programming</h2>
@@ -27,7 +28,8 @@
             Retrieved September 9, 2021, from https://www.educative.io/blog/object-oriented-programming. </h3>
         <!-- Link to second page -->
         <div><a href="secondpage.html">Page 2</a></div>
-
+        <!-- Footer with first name -->
+        <footer>&copy; - Eddie 2021</footer>
    </body>
 	
 </html>
