--- a/secondpage.html
+++ b/secondpage.html
@@ -3,12 +3,13 @@
    <head>
        <!-- Title for browser tab -->
       <title>Page 2</title>
-      <!-- Link to CSS and Javascript -->
-      <script src="index.js"></script>
+      <!-- Link to CSS -->
       <link href="index.css" rel="stylesheet" type="text/css">
-   </head>
+    </head>
 	
-   <body>
+    <body>
+        <!-- Link to JavaScript -->
+        <script src="index.js"></script>
         <!-- Headings -->
         <h1>Information Technology Major</h1>
         <h2>Topic 2: Databases</h2>
@@ -28,7 +29,8 @@
             from https://www.oracle.com/database/what-is-database/. </h3>
         <!-- Link to second page -->
         <div><a href="index.html">Page 1</a></div>
-
+        <!-- Footer with first name -->
+        <footer>&copy; - Eddie 2021</footer>
    </body>
 	
 </html>
